fix: sidebar and timeline

--- a/public/index.html
+++ b/public/index.html
@@ -19,6 +19,11 @@
     -->
     <title>ZEDEX 2020</title>
     <link href="./Widgets/ProjectionPicker/ProjectionPicker.css" rel="stylesheet" />
+    <link href="//cdn.syncfusion.com/ej2/ej2-base/styles/material.css" rel="stylesheet" />
+    <link href="//cdn.syncfusion.com/ej2/ej2-inputs/styles/material.css" rel="stylesheet" />
+    <link href="//cdn.syncfusion.com/ej2/ej2-buttons/styles/material.css" rel="stylesheet" />
+    <link href="//cdn.syncfusion.com/ej2/ej2-react-navigations/styles/material.css" rel="stylesheet" />
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/systemjs/0.19.38/system.js"></script>
   </head>
   <body>
     <noscript>You need to enable JavaScript to run this app.</noscript>
